# GlobalLogicTestTask

./: CMakeLists.txt  tests.txt
src/: CMakeLists.txt  MissingNumbers.cpp  MissingNumbers.h
test/: CMakeLists.txt  MissingNumbersTests.cpp
